[package]
name = "gitter-slack"
version = "0.1.1"
description = "One-way relay from Gitter to Slack"
authors = ["Hong Minhee <hong.minhee@gmail.com>"]
homepage = "https://github.com/dahlia/gitter-slack"
repository = "https://github.com/dahlia/gitter-slack"
license = "AGPL-3.0"
license-file = "LICENSE"
readme = "README.md"
keywords = ["gitter", "slack"]

[badges]
travis-ci = { repository = "dahlia/gitter-slack", branch = "master" }

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
